# quicklizard

./: main.py  pyproject.toml
src/quicklizard/: __init__.py
