[project]
name = "quicklizard"
version = "0.1.0"
description = "Ringgem setup script"
readme = "README.md"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
quicklizard = "quicklizard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quicklizard"]

[tool.ruff.lint]
extend-select = ["I"]
extend-safe-fixes = ["F401"]

[tool.ruff]
preview = true

